sandbox/output
Customer.java:30: error: ';' expected
    public int hashCode() {
                       ^
Customer.java:36: error: reached end of file while parsing
}
 ^
2 errors
